--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
-anyhow = { version = "1"}
+anyhow = { version = "1" }
+chrono = { version = "0.4" }
