--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ anyhow = { version = "1" }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 chrono = { version = "0.4", features = ["serde"] }
+log = "0.4"
+env_logger = "0.11"
