--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ chrono = { version = "0.4", features = ["serde"] }
 serde_json = { version = "1" }
 log = "0.4"
 env_logger = "0.11"
+tempfile = "3"
